--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 100vh;
+    height: auto;
     object-fit: cover;
   }
 
