--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ footer {
 @media (max-width: 768px) {
   .nav {
     padding: 10px 20px;
+    position: relative;
   }
 
   .nav-btn {
@@ -167,12 +168,13 @@ footer {
     position: absolute;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     gap: 1rem;
     width: 100%;
     background-color: #1e1a1a;
     height: 0;
     transition: all 0.3s ease-in;
-    top: 22%;
+    top: 95%;
     left: 0;
     overflow: hidden;
     padding: 0 20px;
